--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -11,3 +11,24 @@
  *= require_self
  *= require_tree .
  */
+ html {
+  background-color: black;
+ }
+
+ body {
+   /*background-color: #E1D2B0;*/
+   margin: 120px 0 0 0;
+   padding: 0;
+   font-family: helvetica;
+   color: white;
+   font-family: 'Press Start 2P', cursive;
+ }
+
+ #footer_bar {
+   font-size: 30px;
+   height: 40px;
+   position: fixed;
+   width: 100%;
+   margin: 0;
+   bottom: 0;
+ }
